новое при создании версии продукта поле (продукт) заполняется автоматически при создании продукта со странички категории поле (категория) у продукта заполняется автоматически
добавлен новый интерфейс взаимодействия с версиями продукта

перенастроены редиректы после действия пользователя

добавлено дополнительно кеширование новых контроллеров

улучшено безопасность контроллеров

обновлена база для базовой загрузки

--- a/blog/templates/blog/blogentry_detail.html
+++ b/blog/templates/blog/blogentry_detail.html
@@ -30,5 +30,8 @@
                 <a href="{% url 'blog:delete' blogentry.slug %}" class="btn btn-outline-danger">Удалить статью</a>
             {% endif %}
         </div>
+        <div class="card-footer">
+            <a href="{% url 'blog:index' %}" class="btn btn-outline-primary">Назад к блогу</a>
+        </div>
     </div>
 {% endblock %}
